<resources>
    <string name="app_name">AntwerpHasFallen</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_inventory">Inventory</string>
    <string name="nav_shop">Shop</string>
    <string name="nav_team">Team</string>
    <string name="nav_exitgame">Exit Game</string>

    <string name="story">Door een mislukt experiment in het MLK (centrum voor medische experimenten) is er een schadelijke stof vrijgekomen in Antwerpen, zij die besmet zijn hebben nog maar een paar uur te leven. De laatste groepen die niet besmet zijn moeten dus zo snel mogelijk aan een tegengif geraken of uit de stad geraken voor ze zelf besmet zijn. Ze moeten onderweg naar bepaalde gebieden gaan om de ingrediënten te verzamelen voor een tegengif of opdrachtjes doen om geld te verdienen. Ze mogen wel maar een bepaalde tijd in dat gebied blijven of ze raken zelf besmet! Met hun verdiende geld kunnen ze onder andere een medicament voor zichzelf aankopen waardoor ze zelf langer in een gebied kunnen blijven of ze kunnen het andere team saboteren, zodat dit team tijd verliest.\nHet team dat als eerste alle ingrediënten heeft om een tegengif te maken wint! </string>
    <string name="beginUitleg">Het doel van het spel is alle ingredienten verzamelen. Je kan ingredienten verzamelen door naar de locaties te gaan, in het tabje map kan je een kaart zien met daarop de vorige locatie van je team en de locatie waar je naartoe moet. Gebruik het hamburgermenu linksboven om te navigeren door de verschillende schermen.</string>
    <string name="opdrachten">Als je op een locatie aankomt krijg je opdrachten die je kan oplossen en hiervoor krijg je een beloning, ofwel een ingredient ofwel geld. Dit geld kan je spenderen in de shop. Het tabje map veranderd dan in puzzles, zo kan je altijd terugkeren naar de puzzel waar je aan bezig was. Let wel op de tijd! Als je te lang in een bepaald gebied blijft sluiten de opdrachten af en als je dan nog langer blijft verlies je geld. Wanneer je een locatie verlaat, of de tijd is op veranderd het tabje terug in map en kan je de volgende locatie zien.</string>
    <string name="shop">In de shop kan je items kopen die jou team kunnen helpen het spel sneller uit te spelen, of items die het andere team tegenhouden om het spel sneller dan jou team uit te spelen.\nItems die je in de shop koopt kan je terugvinden in de inventory</string>
    <string name="inventory">In de inventory vind je al je items en je gevonden ingredienten terug. Als je een item wil gebruiken druk dan op \"use\" naast het item. Je kan zien hoeveel je van elk item nog over hebt.\nBij de gevonden ingredienten kan je ook zien hoeveel je hier al van hebt. </string>
    <string name="team">Bij het tabje team vind je de informatie over je team terug, alsook je teamnaam en de game id. Deze game id heb je nodig om aan het spel te kunnen deelnemen. Ook vind je hier welke ingredienten je nog nodig hebt om het tegengif te maken.</string>
    <string name="anagram">Om de anagram op te lossen moet je met de letters die je krijgt een ander woord maken. Dit woord heeft te maken met de bijbehorende tip die je krijgt</string>
   <string name="quiz">Om de quizpuzzel op te lossen moet je het antwoord kiezen tussen 3 andere mogelijke antwoorden! Pas op, bij een verkeerd atnwoord verlies je geld!</string>
    <string name="Dad">Om de Drag and Drop puzzel op te lossen moet je de antwoorden in de juiste volgorde zetten door de nummers 1 tot 4 in de tekstvakjes te zetten.</string>
    <string name = "vignere">Om de Vignere cijferpuzzel op te lossen, heeft u een cijfercode en een key nodig. U noteert de key onder de cijfercode en blijft dit herhalen tot al de letters van de cijfercode een bijhorende Key letter hebben. Dan zoekt u de Key letter op in het horizontale deel, ga deze rij af tot je de letter van de cijfercode tegenkomt. De letter die hier tegenover staat in het verticale diagram is de juiste letter.Doe dit nu voor elke letter tot je de oplossing hebt!">
</string>
</resources>
