<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ahf.antwerphasfallen.Fragments.TeamFragment"
    android:background="@drawable/shop"
    android:orientation="vertical">

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="175dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Team: "
                    android:textAlignment="center"
                    android:textColor="@color/custom"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textColor="@color/custom"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Game id: "
                    android:textAlignment="textEnd"
                    android:textColor="@color/custom"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textColor="@color/custom"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:id="@+id/txt_sublabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="Vignere cipher"
                android:textAlignment="textStart"
                android:textColor="@color/custom"
                android:background="@color/inventory"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>
            <TextView
                android:id="@+id/txt_uitleg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:textAlignment="textStart"
                android:textColor="@color/custom"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/vignere">
            </TextView>
            <TextView
                android:id="@+id/txt_anagramlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="Anagram"
                android:textAlignment="textStart"
                android:textColor="@color/custom"
                android:background="@color/inventory"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>
            <TextView
                android:id="@+id/txtanagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:textAlignment="textStart"
                android:textColor="@color/custom"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/anagram">
            </TextView>
            <TextView
                android:id="@+id/txt_dadlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="Drag and drop"
                android:textAlignment="textStart"
                android:textColor="@color/custom"
                android:background="@color/inventory"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>
            <TextView
                android:id="@+id/txt_dad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginBottom="20sp"
                android:textColor="@color/custom"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/Dad">
            </TextView>

            <TextView
                android:id="@+id/txt_quizlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="Quiz"
                android:textAlignment="textStart"
                android:textColor="@color/custom"
                android:background="@color/inventory"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/txt_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:textAlignment="textStart"
                android:textColor="@color/custom"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/quiz">
            </TextView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lbl_mingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/inventory"

            android:text="Missing Ingredients"
            android:textAlignment="center"
            android:textColor="@color/custom"
            android:textSize="30dp"
            android:textStyle="bold|italic" />
        <ListView
            android:id="@+id/lv_mingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_mingredients"
            />

    </LinearLayout>


</LinearLayout>
